--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
 					<p class="md:text-[1.125rem] text-[0.7rem] leading[1.625rem] tracking-[-0.04em] text-center text-[#757095] font-[Manrope]">Accmart Latest customer reviews and feedback about products &  services quality.</p>
 				</section>
 				<section class="flex flex-col mx-auto items-center justify-center">
-					<div class="flex xl:flex-row flex-col items-center w-[100%]  justify-center">
-						<div class="flex flex-row items-center justify-start lg:w-[37.125rem] w-full h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] mb-[2.563rem] 2xl:mb-0">
+					<div class="flex xl:flex-row flex-col items-center w-[100%] justify-center mb-[2.5rem]">
+						<div class="flex flex-row items-center justify-start lg:w-[37.125rem] w-full h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] mb-[2.5rem] xl:mb-0">
 							<svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<circle cx="32.5" cy="32.5" r="32.5" fill="#E94A65"/>
 								<path d="M43.7274 39.891L41.733 40.5629C41.1823 40.7461 40.7419 41.1736 40.5583 41.7355L39.8853 43.7265C39.3103 45.4487 36.8876 45.4121 36.3492 43.6898L34.0855 36.4221C33.6451 34.9807 34.9788 33.6371 36.4104 34.089L43.7029 36.3488C45.416 36.8862 45.4404 39.3169 43.7274 39.891Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -243,7 +243,7 @@
 								<p class="font-[500] md:text-[1rem] text-[0.5rem] font-[Manrope] text-[#FFFF] uppercase lleading-4	 md:leading-8">Choose between a Boosting / Coaching Service.</p>
 							</div>
 						</div>
-						<div class="flex xl:ml-[3.375rem] ml-0 flex-row items-center justify-start lg:w-[37.125rem] w-full h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem]   mb-[2.563rem]">
+						<div class="flex xl:ml-[3.375rem] ml-0 flex-row items-center justify-start lg:w-[37.125rem] w-full h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem]">
 							<svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<circle cx="32.5" cy="32.5" r="32.5" fill="#E94A65"/>
 								<path d="M27.3256 26.11L36.8769 22.9262C41.1631 21.4975 43.4919 23.8375 42.0744 28.1237L38.8906 37.675C36.7531 44.0987 33.2431 44.0987 31.1056 37.675L30.1606 34.84L27.3256 33.895C20.9019 31.7575 20.9019 28.2587 27.3256 26.11Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -255,8 +255,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="flex xl:flex-row flex-col w-[100%] items-center justify-center 2xl:mb-0">
-						<div class="flex flex-row items-center justify-start lg:w-[37.125rem] w-full h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] mb-[2.563rem] 2xl:mb-0">
+					<div class="flex xl:flex-row flex-col w-[100%] items-center justify-center lg:mb-0">
+						<div class="flex flex-row items-center justify-start lg:w-[37.125rem] w-full h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] mb-[2.5rem] xl:mb-0">
 							<svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<circle cx="32.5" cy="32.5" r="32.5" fill="#E94A65"/>
 								<path d="M32.5 42.1875C37.8503 42.1875 42.1875 37.8503 42.1875 32.5C42.1875 27.1497 37.8503 22.8125 32.5 22.8125C27.1497 22.8125 22.8125 27.1497 22.8125 32.5C22.8125 37.8503 27.1497 42.1875 32.5 42.1875Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -271,7 +271,7 @@
 								<p class="font-[500] md:text-[1rem] text-[0.5rem] font-[Manrope] text-[#FFFF] uppercase lleading-4	 md:leading-8">Track your order’s status in real time!</p>
 							</div>
 						</div>
-						<div class="flex xl:ml-[3.375rem] ml-0 flex-row items-center justify-start lg:w-[37.125rem] w-full h-[6.563rem] bg-[#17182D] rounded-[0.813rem]  mb-[2.563rem] pl-[1.438rem] ">
+						<div class="flex xl:ml-[3.375rem] ml-0 flex-row items-center justify-start lg:w-[37.125rem] w-full h-[6.563rem] bg-[#17182D] rounded-[0.813rem] pl-[1.438rem] ">
 							<svg width="65" height="65" viewBox="0 0 65 65" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<circle cx="32.5" cy="32.5" r="32.5" fill="#E94A65"/>
 								<path d="M29.2578 35.1L31.1361 36.5584C31.3811 36.8034 31.9295 36.92 32.2912 36.92H34.6011C35.3245 36.92 36.1178 36.3717 36.3045 35.6483L37.7628 31.2266C38.0662 30.3749 37.5178 29.6516 36.6078 29.6516H34.1811C33.8195 29.6516 33.5162 29.3483 33.5745 28.9283L33.8778 26.9916C33.9945 26.4433 33.6328 25.8366 33.0845 25.6616C32.5945 25.4749 31.9878 25.7199 31.7545 26.0816L29.2695 29.78" stroke="white" stroke-width="1.5" stroke-miterlimit="10"/>
